# recipes

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint  logging.conf  pyproject.toml  requirements.txt  run  run_python_linter.py
.github/workflows/: test-app.yml
init-recipes/: init-recipes.sql
public/: report.xml
src/: conftest.py  manage.py  pytest.ini
src/ingredients/: admin.py  api.py  models.py  serializers.py  test_ingredients_api.py  tests.py  urls.py  views.py
src/ingredients/migrations/: 0001_initial.py  0002_alter_ingredient_id_alter_ingredient_name.py
src/recipes/: admin.py  api.py  models.py  serializers.py  test_recipes_api.py  tests.py  urls.py  views.py
src/recipes/migrations/: 0001_initial.py  0002_alter_recipe_description_alter_recipe_id_and_more.py
src/recipes_main/: api.py  asgi.py  settings.py  test_main_api.py  test_settings.py  testing_settings.py  urls.py  wsgi.py
src/units/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/units/migrations/: 0001_initial.py  0002_populate_units_table.py
