[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "./src/recipes_main/test_settings.py",
]
force-exclude = true

line-length = 100

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 100
extend-exclude = ""

[tool.poetry]
name = "recipes"
version = "0.1.0"
description = ""
authors = ["Emese Boga <e.boga@ateme.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
djangorestframework = "3.14.0"
django = "4.2.5"
pytest = "7.4.3"
pytest-django = "4.7.0"
coverage = "7.3.3"
black = "23.12.0"
ruff = "0.1.8"
whitenoise = "6.6.0"
colorlog = "6.8.0"
isort = "5.13.2"
psycopg2-binary = "2.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
